# swd_starter_kit_description

./: CMakeLists.txt  README.md  package.xml
config/: swd_starter_kit.rviz
launch/: display.launch  gazebo.launch
meshes/wheels/: starter_kit_left_tire.stl  starter_kit_right_tire.stl
urdf/: swd_starter_kit.urdf
worlds/: four_boxes.world
