<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>swd_starter_kit_description</name>

  <version>1.0.0</version>

  <description>
    <p>URDF package for the SWD Starter Kit</p>
  </description>

  <maintainer email="a.bougouffa@ez-wheel.com">Abdelhak BOUGOUFFA</maintainer>
  <author email="a.bougouffa@ez-wheel.com">Abdelhak BOUGOUFFA</author>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <export>
    <architecture_independent />
  </export>
</package>
